--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -82,10 +82,10 @@
                                                         href="/services/blockchain-workshops/"
                                                         itemprop="url" class="dropdown-item depth-1">Training and
                                                         education<span></span></a></li> -->
-                                    <li id="menu-item-2948" itemprop="name"
+                                    <!-- <li id="menu-item-2948" itemprop="name"
                                         class="menu-item menu-item-type-post_type menu-item-object-services menu-item-2948">
                                         <a title="Blockchain R&#038;D services" href="/services/research" itemprop="url"
-                                            class="dropdown-item depth-1">区块链研发<span></span></a></li>
+                                            class="dropdown-item depth-1">区块链研发<span></span></a></li> -->
                                 </ul>
                             </li>
                             <li id="menu-item-89" itemprop="url"
