--- a/views/index.ejs
+++ b/views/index.ejs
@@ -126,7 +126,87 @@
                 <a href="#contact" class="link">更多</a>
             </div>
         </div>
+        <div class="row block">
+            <div class="research-who-is-this">
+                <h2 class="gor-100 col-md-12 col-sm-4">我们提供的技术和解决方案适用于哪些场景和行业？</h2>
+                <div class="h4 gor-100 col-md-12 col-sm-4">对于任何行业或任何规模的企业，我们都做好了调查的准备，为您的企业量身打造区块链的项目。</div>
+                <div class="gor-100">
+                    <div class="row advisory-icons hyperledger-icons research-development-icons col-md-12 col-sm-4">
+                        <div class="col-lg-4 df mw-300">
+                            <div class="ico ico-1"></div>
+                            <h3>区块链初创公司</h3>
+                        </div>
+                        <div class="col-lg-4 df mw-300">
+                            <div class="ico ico-1"></div>
+                            <h3>中小企业</h3>
+                        </div>
+                        <div class="col-lg-4 df mw-300">
+                            <div class="ico ico-1"></div>
+                            <h3>国企或事业单位</h3>
+                        </div>
+                        <div class="col-lg-4 df mw-300">
+                            <div class="ico ico-1"></div>
+                            <h3>跨国集团</h3>
+                        </div>
+                        <div class="col-lg-4 df mw-300">
+                            <div class="ico ico-1"></div>
+                            <h3>政府机构</h3>
+                        </div>
+                        <div class="col-lg-4 df mw-300">
+                            <div class="ico ico-1"></div>
+                            <h3>非营利组织</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row block">
+            <div class="research-expertise">
+                <h2 class="col-md-12 gor-100 col-sm-12">我们在区块链开发方面的专业知识</h2>
+                <div class="h4 gor-100 col-lg-12 col-md-12 col-sm-12">
+                    我们帮助合作伙伴从一系列行业领先的区块链中选择最合适的区块链技术，包括Hyperledger(超级账本)，BitShares(比特股)，EOSIO和Ethereum(以太坊)。</div>
+                <div class="gor-100 col-lg-12 col-md-12 col-sm-12">
+                    <div class="row advisory-icons sc-icons retail-icons research-expertise-icons">
+                        <div class="col-lg-6 col-md-12 col-sm-12 df">
+                            <div class="ico"></div>
+                            <h3>公有链和私有链</h3>
+                        </div>
+
+                        <div class="col-lg-6 col-md-12 col-sm-12 df">
+                            <div class="ico"></div>
+                            <h3>
+                                <a class="link-black" href="/services/smart-contract">
+                                    智能合约开发
+                                </a>
+                            </h3>
+                        </div>
+
+                        <div class="col-lg-6 col-md-12 col-sm-12 df">
+                            <div class="ico"></div>
+                            <h3>Dapps开发</h3>
+                        </div>
+
+                        <div class="col-lg-6 col-md-12 col-sm-12 df">
+                            <div class="ico"></div>
+                            <h3>去中心化交易所</h3>
+                        </div>
+
+                        <div class="col-lg-6 col-md-12 col-sm-12 df">
+                            <div class="ico"></div>
+                            <h3><a class="link-black" href="/services/blockchain-development/">区块链开发</a></h3>
+                        </div>
+
+                        <div class="col-lg-6 col-md-12 col-sm-12 df">
+                            <div class="ico"></div>
+                            <h3><a class="link-black" href="/solutions/">行业解决方案</a></h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
+
 
     <div class="about">
         <div class="container">
