--- a/views/services/eosio.ejs
+++ b/views/services/eosio.ejs
@@ -92,18 +92,18 @@
                 </div>
             </div>
             <div class="enhance-business-content eosio-every-business">
-                <h2>EOSIO：不同的业务、不同的流程都建立在这个目前属于全球最快的公链上。</h2>
+                <h2>目前属于全球性能最好的公链</h2>
                 <div class="gor-100">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="h4">
-                                <p>只要是与数据安全和速度相关的业务功能都能使用EOSIO的Dapp进行改进。</p>
+                                <p>只要是与数据的安全和性能相关的业务，都能使用EOSIO的Dapp进行改进。</p>
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <p>EOSIO的Dapp易于使用、速度极快并且可以无限拓展，为您的业务流程提供了安全性、透明性和自动化。</p>
-                            <p>EOSIO基于DPoS共识机制，目前能够处理1000到6000TPS，并且每秒可以打包500MB大小的区块，且预计有更快的速度。</p>
-                            <p>EOSIO的高可用性、可拓展性、可编程的智能合约、底层系统的API和超高性能使其成为企业的最佳选择。</p>
+                            <p>Dapp使用简单、性能高且可以无限的拓展。</p>
+                            <p>基于DPoS共识机制，目前能够处理1000到6000TPS，并且每秒可以打包500MB左右大小的区块，且预计有更快的速度。</p>
+                            <p>高性能、高可用性、可拓展性、强大的智能合约、底层系统的API，这些特性组合在一起使其成为企业的最佳选择。</p>
                         </div>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                         <div class="tile tile-collapse">
                             <h3>性能</h3>
                             <div class="text">
-                                EOSIO现在的速度很快，而且预计会越来越快，它的开发团队暂时定的目标是将TPS扩展到无限，并且基于DPoS共识机制的EOSIO意味着随着应用规模的扩大，它的速度反而会越来越快而不是越来越慢。
+                                EOSIO拥有非常高的性能，而且也预计会越来越快，开发团队暂定的目标是将TPS扩展到无限。基于DPoS共识机制的EOSIO意味着随着应用规模不断的扩大，它的速度会反增不减。
                                 <div class="fade-out"></div>
                             </div>
                         </div>
@@ -153,7 +153,7 @@
                     <div class="col-md-6">
                         <div class="tile tile-collapse">
                             <h3>交互式智能合约</h3>
-                            <div class="text">EOSIO的智能合约可以永无止境地运行，且没有时间的限制，并且任何数量的智能合约都可以相互交互-区块链的ITTT，具有无限的业务应用程序。<div
+                            <div class="text">EOSIO的智能合约可以永无止境地运行，并且任何数量的智能合约都可以相互交互-区块链的ITTT，具有无限的业务应用程序。<div
                                     class="fade-out"></div>
                             </div>
                         </div>
@@ -175,21 +175,21 @@
 
         <div class="eosio-apps">
             <div class="container">
-                <h2 class="mt-40">使用EOSIO：实际应用程序</h2>
+                <h2 class="mt-40">真实的应用场景</h2>
                 <div
                     class="row tiles-label-mini tiles-lable-collapse three-tiles point-list-accordion-plus eosio-apps-lable">
 
                     <div class="col-md-4">
                         <div class="tile tile-collapse point-accordion-plus">
-                            <h3>去中心化应用</h3>
-                            <div class="text">EOSIO可以根据您的需求使用EOS通证或自己的通证创建（Dapp）去中心化应用程序。</div>
+                            <h3>去中心化的应用</h3>
+                            <div class="text">根据您的需求使用EOS通证或自己的通证创建去中心化应用程序。</div>
                         </div>
                     </div>
 
                     <div class="col-md-4">
                         <div class="tile tile-collapse point-accordion-plus">
                             <h3>智能合约</h3>
-                            <div class="text">创建自动执行的合约，相互关联并能永久的管理流程和付款。</div>
+                            <div class="text">自动执行的合约，合约之间相互关联并能永久的管理流程和付款。</div>
                         </div>
                     </div>
 
