--- a/views/services/hyperledger.ejs
+++ b/views/services/hyperledger.ejs
@@ -160,8 +160,9 @@
                         <div class="tile tile-collapse point-accordion-plus">
                             <h3>Hyperledger Fabric</h3>
                             <div class="text">
-                                <p>Fabric框架具有模块化，可配置和可扩展的体系结构，是安全企业级环境的坚实基础。</p>
-                                <p>使用Fabric的可定制共识协议和重新发明的Hyperledger智能合约，我们将为您当前的环境建立一个有权限许可的区块链网络，并随着在您业务的发展对其进行定制。</p>
+                                <p>Fabric框架具有模块化、可配置和可扩展的技术架构，是企业级环境安全的坚实基础。</p>
+                                <br>
+                                <p>使用Fabric可定制的共识协议和超级账本的智能合约，将为您建立一个联盟的区块链网络，并且随着您业务的发展对其进行相应的升级。</p>
                             </div>
                         </div>
                     </div>
@@ -170,8 +171,8 @@
                         <div class="tile tile-collapse point-accordion-plus">
                             <h3>Hyperledger Sawtooth</h3>
                             <div class="text">
-                                <p>Sawtooth框架支持创建和运行分布式账本，并且具备可插拔共识算法和事务处理算法的灵活性。</p>
-                                <p>通过Sawtooth框架，我们可以创建具有数据优先级、可追溯的多用途区块链网络或应用程序，从而使您能够即时交换共识协议，并同时处理并行流中不同的事务。</p>
+                                <p>Sawtooth框架支持创建和运行去中心化的账本，并且具备可插拔共识算法和事务处理算法的灵活性。</p>
+                                <p>通过Sawtooth框架，可以创建具有数据优先级的多用途区块链网络或应用程序，使您能够即时的交换共识协议，并同时处理并行事务流中不同的事务。</p>
                             </div>
                         </div>
                     </div>
@@ -180,8 +181,8 @@
                         <div class="tile tile-collapse point-accordion-plus">
                             <h3>Hyperledger Iroha</h3>
                             <div class="text">
-                                <p>Iroha是一个专为移动应用而设计的框架，非常适合金融交易和身份验证。它聚焦于支持基于角色的访问、独特的高性能共识协议和内置的资产和帐户管理命令等方面。</p>
-                                <p>我们将使用Iroha来提供经过许可的区块链网络和应用程序，从而增强用户错误保护，并简化用于创建帐户，处理ID和交换资产的流程。</p>
+                                <p>Iroha是一个专为移动应用而设计的框架，比较适合用于金融交易和身份验证。它的优势在于支持基于角色的访问权限、高性能的共识协议和内置的资产和帐户管理命令等方面。</p>
+                                <p>使用Iroha搭建的联盟链和应用程序可以简化帐户创建，处理ID和交换资产的流程。</p>
                             </div>
                         </div>
                     </div>
@@ -191,11 +192,10 @@
                             <h3>Hyperledger Burrow</h3>
                             <div class="text">
                                 <p>
-                                    Hyperledger
-                                    Burrow专注于以太坊，它不是高度模块化或可插拔的。该框架没有提供广泛的自定义选项，而是专注于运行和改进具有高事务吞吐量共识协议的以太坊虚拟机（EVM）智能合约。
+                                    Burrow并不是高度模块化或可插拔的，它的重心在以太坊上，现专注于改进具有高事务吞吐量共识协议的以太坊虚拟机（EVM）智能合约。
                                 </p>
                                 <p>
-                                    我们将单独使用Burrow或与其他Hyperledger框架一起创建具有扩展EVM功能的许可区块链网络。
+                                    我们将单独使用Burrow或与其他Hyperledger框架一起创建具有扩展EVM功能的联盟链。
                                 </p>
                             </div>
                         </div>
@@ -205,8 +205,8 @@
                         <div class="tile tile-collapse point-accordion-plus">
                             <h3>Hyperledger Indy</h3>
                             <div class="text">
-                                <p>Hyperledger
-                                    Indy是实现去中心化身份标识的通用框架。我们使用Indy根据保护隐私的规范和设计模式来创建安全的数字身份，使它们在各个域，应用程序，区块链和其他分布式账本之间可以互相操作。
+                                <p>
+                                    Indy是实现去中心化身份标识的通用框架。我们使用Indy根据保护隐私的规范和设计模式来创建安全的数字身份，使它们在各个域，应用程序，区块链和其它去中心化账本之间可以互相操作。
                                 </p>
                             </div>
                         </div>
