--- a/views/services/research-and-development.ejs
+++ b/views/services/research-and-development.ejs
@@ -52,35 +52,30 @@
 
         <div class="container">
             <div class="research-who-is-this">
-                <h2>什么样的行业或者企业能够使用我们提供的区块链技术？</h2>
-                <div class="h4 gor-100">对于任何规模的企业，任何行业，我们都做好了调查的准备。帮助您的企业量身打造基于区块链的项目。</div>
+                <h2>我们提供的技术和解决方案适用于哪些场景和行业？</h2>
+                <div class="h4 gor-100">对于任何行业或任何规模的企业，我们都做好了调查的准备，为您的企业量身打造区块链的项目。</div>
                 <div class="gor-100">
                     <div class="row advisory-icons hyperledger-icons research-development-icons">
                         <div class="col-lg-4 df mw-300">
                             <div class="ico ico-1"></div>
                             <h3>区块链初创公司</h3>
                         </div>
-
                         <div class="col-lg-4 df mw-300">
                             <div class="ico ico-1"></div>
                             <h3>中小企业</h3>
                         </div>
-
                         <div class="col-lg-4 df mw-300">
                             <div class="ico ico-1"></div>
-                            <h3>企事业单位</h3>
+                            <h3>国企或事业单位</h3>
                         </div>
-
                         <div class="col-lg-4 df mw-300">
                             <div class="ico ico-1"></div>
-                            <h3>国际企业</h3>
+                            <h3>跨国集团</h3>
                         </div>
-
                         <div class="col-lg-4 df mw-300">
                             <div class="ico ico-1"></div>
                             <h3>政府机构</h3>
                         </div>
-
                         <div class="col-lg-4 df mw-300">
                             <div class="ico ico-1"></div>
                             <h3>非营利组织</h3>
@@ -89,15 +84,13 @@
                 </div>
             </div>
         </div>
+
         <div class="openLedger-research-and-department">
             <div class="container">
                 <h2>OpenLedger研发部门</h2>
                 <div class="gor-100">
                     <div class="h4">
-                        为了使区块链实施对您的业务尽可能有效，OpenLedger提供了我们自己的研发部门的服务。
-                        <br>
-                        <br>
-                        我们的团队包括多名内部专家，他们参与每个项目，确定所面临的挑战和业务问题，并为您当前的业务需求提供最有效的解决方案。
+                        我们的团队内拥有多名区块链技术专家，由他们分析项目实施所面临的挑战和业务方面的问题，并为您当前的需求提供最有效的解决方案。
                     </div>
                 </div>
             </div>
@@ -213,7 +206,8 @@
         <div class="research-expertise">
             <div class="container">
                 <h2>我们在区块链开发方面的专业知识</h2>
-                <div class="h4 gor-100">我们帮助合作伙伴从一系列行业领先的区块链中选择最合适的区块链技术，包括Hyperledger(超级账本)，BitShares(比特股)，EOSIO和Ethereum(以太坊)。</div>
+                <div class="h4 gor-100">
+                    我们帮助合作伙伴从一系列行业领先的区块链中选择最合适的区块链技术，包括Hyperledger(超级账本)，BitShares(比特股)，EOSIO和Ethereum(以太坊)。</div>
                 <div class="gor-100">
                     <div class="row advisory-icons sc-icons retail-icons research-expertise-icons">
 
