--- a/views/solutions/index.ejs
+++ b/views/solutions/index.ejs
@@ -69,7 +69,7 @@
             <div class="row">
                 <div class="col-lg-8 col-sm-12">
                     <h1>区块链行业解决方案</h1>
-                    <div class="h2-banner h2-banner-indents">通过区块链优化后的流程以及透明的操作和对资产的完全即时的控制来促进您的业务</div>
+                    <div class="h2-banner h2-banner-indents">通过区块链优化后的流程以及透明的操作<br>和对资产的完全即时的控制来促进您的业务</div>
                     <a href="#contact" class="link">获取报价</a>
                     <div class="bg"></div>
                 </div>
