口语化翻译

--- a/views/services/blockchain-development.ejs
+++ b/views/services/blockchain-development.ejs
@@ -39,7 +39,7 @@
             <div class="row">
                 <div class="col-md-6 col-sm-12">
                     <h1>区块链开发服务</h1>
-                    <div class="h2-banner h2-border color-white"><br>我们提供不同行业的区块链定制化开发和解决方案</div>
+                    <div class="h2-banner h2-border color-white"><br>提供不同行业的区块链定制化开发和解决方案</div>
                     <a href="#contact" class="link">现在联系</a>
                 </div>
                 <div class="col-md-6 banner-bg d-none d-md-block"></div>
@@ -78,7 +78,7 @@
                 <div>
                     <div class="h4">根据您所在的行业和需求来设计合理的解决方案。</div>
                     <div class="h4">
-                        我们根据您的业务、需求和规模在Hyperledger(超级账本)、EOS、BitShares(比特股)和Ethereum(以太坊)中选择出最适合您的区块链平台，这些平台都是全球领先的，且都是经过市场多年推敲筛选出来的。
+                        根据您的业务、需求和规模在Hyperledger(超级账本)、EOS、BitShares(比特股)和Ethereum(以太坊)中选择出最适合您的区块链平台，这些平台都是全球领先的，且都是经过市场多年推敲筛选出来的。
                     </div>
                 </div>
             </div>
@@ -246,7 +246,7 @@
                                                 <h3 class="h2">
                                                     <span>1 <span>/</span></span>项目调研和规划</h3>
                                                 <p class="mt-10px">
-                                                    调研的阶段可能比开发阶段时间更长，因为我们必须确保能够准确地理解您的问题和需求，并设计出一种完美的满足您需求的解决方案。
+                                                    调研的阶段可能比开发阶段时间更长，因为必须确保能够准确地理解您的问题和需求，并设计出一种完美的满足您需求的解决方案。
                                                 </p>
                                             </div>
                                             <div class="col-md-6">
@@ -273,7 +273,7 @@
                                                 <h3 class="h2">
                                                     <span>2 <span>/</span></span>开发阶段</h3>
                                                 <p class="mt-10px">
-                                                    此阶段我们以敏捷开发流程作为核心，每天进行站立会议每周进行团队会议，项目经理全天候24小时跟踪项目的进度，并定期向您汇报结果，以便您可以了解到项目的最新进展。
+                                                    此阶段以敏捷开发流程作为核心，每天进行站立会议每周进行团队会议，项目经理全天候24小时跟踪项目的进度，并定期向您汇报结果，以便您可以了解到项目的最新进展。
                                                 </p>
                                             </div>
                                             <div class="col-md-6">
@@ -298,7 +298,7 @@
                                                 <h3 class="h2">
                                                     <span>3 <span>/</span></span>支持</h3>
                                                 <p class="mt-10px">
-                                                    随着您的公司发展日益壮大，您的区块链解决方案也需要跟上它的业务发展需要。我们提供持续的技术支持，以及对现有的功能进行改进和升级并根据情况而定增加新的特性。
+                                                    随着您的公司发展日益壮大，您的区块链解决方案也需要跟上业务的发展。我们为您提供持续的技术支持，以及对现有的功能进行改进和升级并根据情况而定增加新的特性。
                                                 </p>
                                             </div>
                                             <div class="col-md-6">
