--- a/views/services/graphene-bitshares.ejs
+++ b/views/services/graphene-bitshares.ejs
@@ -107,7 +107,7 @@
                                 石墨烯拥有高达10万TPS的性能，超过了Visa和万事达（全球排名一，二的国际信用卡组织）处理能力的总和。
                             </p>
                             <p>
-                                通过和它提供的通用性相结合，这就意味着它可以解决和改进每个行业、领域和数据安全、事务处理速度相关的业务。
+                                高性能和多功能的结合意味着它可以解决和改进各个行业、领域的数据安全以及事务处理效率相关的问题。
                             </p>
                         </div>
                     </div>
@@ -175,7 +175,7 @@
             <div class="industry-is-covered-content">
                 <h2>改进各个行业</h2>
                 <div class="h4 gor-100">
-                    从不同的环境调整BitShares，来满足特定的企业需求。可以说任何行业都可以从BitShares中得到好处，这是一些已经投入使用的案例：
+                    从不同的场景调整BitShares，来满足特定的企业需求。可以说任何行业都可以从BitShares中得到好处，这是一些已经投入使用的案例：
                 </div>
                 <div class="industry-is-covered-list">
                     <div class="row">
@@ -219,7 +219,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="h4 gor-100">通过专业的技能和多年区块链行业的经验，我们是把石墨烯和BitShares区块链无缝集成到您的业务流程中的最佳合作方。</div>
+                <div class="h4 gor-100">通过专业的技能和多年区块链行业的经验，我们是将石墨烯和BitShares区块链无缝集成到您的业务流程中的最佳合作方。</div>
             </div>
         </div>
     </div>
