--- a/views/services/hyperledger.ejs
+++ b/views/services/hyperledger.ejs
@@ -195,7 +195,7 @@
                                     Burrow并不是高度模块化或可插拔的，它的重心在以太坊上，现专注于改进具有高事务吞吐量共识协议的以太坊虚拟机（EVM）智能合约。
                                 </p>
                                 <p>
-                                    我们将单独使用Burrow或与其他Hyperledger框架一起创建具有扩展EVM功能的联盟链。
+                                    您可以单独使用Burrow或与其他Hyperledger框架一起创建具有扩展EVM功能的联盟链。
                                 </p>
                             </div>
                         </div>
@@ -206,7 +206,7 @@
                             <h3>Hyperledger Indy</h3>
                             <div class="text">
                                 <p>
-                                    Indy是实现去中心化身份标识的通用框架。我们使用Indy根据保护隐私的规范和设计模式来创建安全的数字身份，使它们在各个域，应用程序，区块链和其它去中心化账本之间可以互相操作。
+                                    Indy是实现去中心化身份标识的通用框架。根据Indy的保护隐私的规范来创建的数字身份可以使它们在不同的区块链平台和其它去中心化账本之间互相操作。
                                 </p>
                             </div>
                         </div>
