--- a/views/services/index.ejs
+++ b/views/services/index.ejs
@@ -53,7 +53,7 @@
             <div class="gor-100">
                 <div class="h4">
                     <div>
-                        <div>我们专注于用先进的区块链技术实现现代企业的业务需求。</div>
+                        <div>专注于用区块链技术实现数字化时代的企业的需求。</div>
                     </div>
                 </div>
                 <div class="row">
@@ -79,7 +79,7 @@
         </div>
 
         <div class="container services-single-block">
-            <h2>我们提供的服务</h2>
+            <h2>提供的服务</h2>
             <div class="gor-100">
                 <div class="row">
                     <div class="col-lg-5">
@@ -102,14 +102,14 @@
                     <div class="col-md-6">
                         <div class="tile">
                             <h3>Hyperledger(超级帐本)</h3>
-                            <div class="text">通过超级账本，您可以组建一条联盟链，在整个联盟链的网络中发起的每个事务（交易）都是可以信赖的。整条链中的事务虽然透明但不代表所有人都可见，因为这不符合我们的现实生活场景，超级账本的权限设计模块已经解决了这一问题。<a class="teal-link"
+                            <div class="text">通过超级账本，您可以组建一条联盟链，在整个联盟链的网络中发起的每个事务（交易）都是可以信赖的。整条链中的事务虽然透明但不代表所有人都可见，因为这不符合现实生活场景，超级账本的权限设计模块已经解决了这一问题。<a class="teal-link"
                                     href="/services/hyperledger">了解更多</a></div>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="tile">
                             <h3>BitShares(石墨烯和比特股)</h3>
-                            <div class="text">我们的技术团队都是经验丰富的Graphene(石墨烯)和BitShares(比特股)研发人员，我们能把BitShares无缝集成到您的企业流程中。<a class="teal-link"
+                            <div class="text">研发人员对Graphene(石墨烯)和BitShares(比特股)非常了解，能把BitShares无缝集成到您的企业流程中。<a class="teal-link"
                                     href="/services/graphene-bitshares">了解更多</a></div>
                         </div>
                     </div>
