--- a/views/services/research-and-development.ejs
+++ b/views/services/research-and-development.ejs
@@ -53,7 +53,7 @@
         <div class="container">
             <div class="research-who-is-this">
                 <h2>我们提供的技术和解决方案适用于哪些场景和行业？</h2>
-                <div class="h4 gor-100">对于任何行业或任何规模的企业，我们都做好了调查的准备，为您的企业量身打造区块链的项目。</div>
+                <div class="h4 gor-100">对于任何行业或任何规模的企业，我们都做好了调查的准备，并且可以为您的企业量身打造区块链的项目。</div>
                 <div class="gor-100">
                     <div class="row advisory-icons hyperledger-icons research-development-icons">
                         <div class="col-lg-4 df mw-300">
@@ -90,7 +90,7 @@
                 <h2>OpenLedger研发部门</h2>
                 <div class="gor-100">
                     <div class="h4">
-                        我们的团队内拥有多名区块链技术专家，由他们分析项目实施所面临的挑战和业务方面的问题，并为您当前的需求提供最有效的解决方案。
+                        团队内拥有多名区块链技术专家，由他们分析项目实施所面临的挑战和业务方面的问题，并为您当前的需求提供最有效的解决方案。
                     </div>
                 </div>
             </div>
@@ -205,9 +205,9 @@
         </div>
         <div class="research-expertise">
             <div class="container">
-                <h2>我们在区块链开发方面的专业知识</h2>
+                <h2>区块链开发方面的专业知识</h2>
                 <div class="h4 gor-100">
-                    我们帮助合作伙伴从一系列行业领先的区块链中选择最合适的区块链技术，包括Hyperledger(超级账本)，BitShares(比特股)，EOSIO和Ethereum(以太坊)。</div>
+                    帮您从一系列行业领先的区块链中选择最合适的区块链技术包括Hyperledger(超级账本)，BitShares(比特股)，EOSIO和Ethereum(以太坊)。</div>
                 <div class="gor-100">
                     <div class="row advisory-icons sc-icons retail-icons research-expertise-icons">
 
