--- a/views/services/smart-contract.ejs
+++ b/views/services/smart-contract.ejs
@@ -157,7 +157,7 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="point point-accordion">
-                                            <h3>速度</h3>
+                                            <h3>效率</h3>
                                             <div class="text">
                                                 <p>自动化执行使业务处理快速、高效。</p>
                                             </div>
@@ -218,7 +218,7 @@
                                                     </div>
                                                     <div class="new-list-col-8">
                                                         <div class="new-list">
-                                                            <h4>我们在Hyperledger上开发以下智能合约：</h4>
+                                                            <h4>基于Hyperledger上开发以下智能合约：</h4>
                                                             <div class="new-list-points">
                                                                 <ul>
                                                                     <li>自动理赔</li>
@@ -281,7 +281,7 @@
                             <div class="sc-audit-content">
                                 <h2>OpenLedger的智能合约审核</h2>
                                 <div class="h4 gor-100">
-                                    部署智能合约时，安全漏洞，错误和效率低下会给您造成很大的损失。OpenLedger经验丰富的团队可帮助公司优化智能合约代码并从头开始实施智能合约安全审核。</div>
+                                    部署智能合约时，安全漏洞，错误和效率低下会给您造成很大的损失。OpenLedger的研发团队可帮助公司优化智能合约代码并从头开始实施智能合约安全审核。</div>
                                 <div class="gor-100">
                                     <div class="row advisory-icons sc-icons">
 
@@ -319,17 +319,17 @@
                             <div class="sc-custom-content">
                                 <h2>定制区块链智能合约开发</h2>
                                 <div class="h4 gor-100">
-                                    从我们的专业知识中受益并运行定制的智能合约，以帮助您发展和促进业务。石墨烯和EVM的独特组合是正确的智能合约解决方案，可让您保持领先地位。</div>
+                                    石墨烯和EVM的独特组合是比较合适的智能合约解决方案。</div>
                                 <div class="gor-100">
                                     <div class="row col-text">
                                         <div class="col-md-5">
-                                            <p>智能合约基于区块链技术运行，承载了区块链的所有优势。去中心化，安全和自动化的区块链智能合约开发为公司提供安全性，经济性，带来自动化和标准化。
+                                            <p>智能合约基于区块链技术运行，承载了区块链的所有优势。去中心化、安全和自动化的区块链智能合约开发为公司提供安全性，经济性，带来自动化和标准化。
                                             </p>
                                         </div>
                                         <div class="col-md-7">
                                             <div class="row">
                                                 <div class="col-md-6">
-                                                    <p>在一个以技术创新和持续改进为特征的领域，智能合约的速度与其底层区块链息息相关。</p>
+                                                    <p>在一个以技术创新和持续改进为特征的领域，智能合约的性能与其底层区块链息息相关。</p>
                                                 </div>
                                                 <div class="col-md-6">
                                                     <p>在OpenLedger，我们知道如何构建复杂而强大的解决方案。我们提供基于EVM
@@ -357,7 +357,7 @@
                                     <div class="col-lg-3">
                                         <div class="row bold-list">
                                             <ul>
-                                                <li>提高速度和效率</li>
+                                                <li>提高效率</li>
                                                 <li>私有，公共和混合区块链的机会</li>
                                             </ul>
                                         </div>
