--- a/views/services/eosio.ejs
+++ b/views/services/eosio.ejs
@@ -153,7 +153,7 @@
                     <div class="col-md-6">
                         <div class="tile tile-collapse">
                             <h3>交互式智能合约</h3>
-                            <div class="text">EOSIO的智能合约可以永无止境地运行，并且任何数量的智能合约都可以相互交互-区块链的ITTT，具有无限的业务应用程序。<div
+                            <div class="text">智能合约可以永久运行，合约之间也能互相调用，适用于各种业务应用场景。<div
                                     class="fade-out"></div>
                             </div>
                         </div>
