--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,9 +68,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-sm-12">
-                    <h1>用区块链技术改进<br>您现有的业务模式</h1>
+                    <h1>用区块链技术改进<br>现有的业务模式</h1>
                     <div class="h2-banner h2-border color-white">
-                        我们提供基于区块链的技术和不同行业的解决方案，<br>把区块链融入到您所在的行业中，<br>帮助您的企业简化办事流程、提高办事效率，并确保规章制度的公平和公正。</div>
+                        提供基于区块链的技术和不同行业的解决方案，<br>把区块链融入到您所在的行业中，<br>帮助企业简化办事流程、提高办事效率，并确保规章制度的公平和公正。</div>
                     <div class="banner-text">
                         OpenLedger提供区块链技术开发服务和定制化区块链底层系统的研发，用技术去推动各个行业、商业模式从传统技术到区块链技术的过渡，为业务的转型提供动力。
                         <br><br>基于革命性的去中心化网络构建新的业务管理软件。
@@ -92,9 +92,9 @@
             <div class="col-md-6 image-block-right text-left">
                 <h2>区块链开发</h2>
                 <div class="text">
-                    OpenLedger拥有经验丰富的区块链技术团队来提供专业技术服务。
+                    OpenLedger拥有专业区块链技术团队来提供技术服务。
                     <br><br>
-                    我们基于全球最受欢迎的区块链底层系统，包括Hyperledger(超级账本)、EOS、BitShares(比特股)和Ethereum(以太坊)，来进行业务开发，并且根据您现有的需求和规模来设计最佳的解决方案。
+                    基于全球最受欢迎的区块链底层系统，包括Hyperledger(超级账本)、EOS、BitShares(比特股)和Ethereum(以太坊)，来进行业务开发，并且根据您现有的需求和规模来设计最佳的解决方案。
                 </div>
                 <a href="#contact" class="link">联系我们</a>
             </div>
@@ -104,7 +104,7 @@
                 <h2>基于区块链的行业解决方案</h2>
                 <div class="text" style="text-align: left;">
                     <br>OpenLedger为金融、科技、娱乐等其它行业提供定制化的基于区块链的解决方案。
-                    <br><br>我们以专业的知识和技能以及在区块链行业多年累积的经验可以设计满足大规模复杂的业务和安全高效的解决方案，来满足您行业的需求。
+                    <br><br>以专业的知识和技能以及在区块链行业多年累积的经验可以设计满足大规模复杂的业务和安全高效的解决方案，来满足您行业的需求。
                     <br><br>通过基于区块链技术的业务管理、操作透明和对企业资产即时完全的把控来促进您企业的发展。
                 </div>
                 <a href="#contact" class="link">联系我们</a>
@@ -121,16 +121,97 @@
             </div>
             <div class="col-md-6 image-block-right text-left">
                 <h2>区块链周边产品研发</h2>
-                <div class="text">openLedger不仅提供区块链系统的定制开发,我们还提供包括Dapp(去中心化应用程序)、智能合约、区块浏览器、交易所通证对接、钱包等区块链周边产品的研发服务。
+                <div class="text">openLedger不仅提供区块链系统的定制开发，还提供包括Dapp(去中心化应用程序)、智能合约、区块浏览器、交易所通证对接、钱包等区块链周边产品的研发服务。
                 </div>
                 <a href="#contact" class="link">更多</a>
             </div>
         </div>
         <div class="row block">
+            <div class="openLedger-research-and-department">
+                <div class="container">
+                    <h2>OpenLedger的研发部门</h2>
+                    <div class="">
+                        <div class="h4">
+                            团队内拥有多名区块链技术的专家，他们负责分析项目实施所面临的各种挑战和业务方面等问题，并提供最有效的解决方案。
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="manufacturer-scheme research-manufacturer-scheme">
+                <div class="container">
+                    <div class="manufacturer-scheme-content">
+                        <img class="manufacturer-dots" src="/images/Solutions/Logistics/dots.svg" alt="Dots">
+                        <img class="manufacturer-image manufacturer-image-1170"
+                            src="/images/Services/Research/scheme1170.svg"
+                            alt="OpenLedger research and development department">
+                        <img class="manufacturer-image manufacturer-image-1024"
+                            src="/images/Services/Research/scheme1024.svg"
+                            alt="OpenLedger research and development department">
+                        <div class="manufacturer-points research-manufacturer-points">
+                            <div class="manufacturer-point">
+                                <div class="manufacturer-point-toggle manufacturer-point-toggle01">
+                                    <span class="manufacturer-point-title">需求分析</span>
+                                </div>
+                                <div class="manufacturer-point-content">
+                                    <div class="solid-arrow"></div>
+                                    <ul class="manufacturer-point-list manufacturer-list">
+                                        <li>考察、分析、记录项目需求。</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="manufacturer-point">
+                                <div class="manufacturer-point-toggle manufacturer-point-toggle02">
+                                    <span class="manufacturer-point-title">分析市场契合度和竞争者</span>
+                                </div>
+                                <div class="manufacturer-point-content">
+                                    <div class="solid-arrow"></div>
+                                    <ul class="manufacturer-point-list manufacturer-list">
+                                        <li>对项目进行评估，确定市场或公司内部的需求程度。同时和同行业企业进行比较分析，找出该项目相对于竞争对手的优缺点。</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="manufacturer-point">
+                                <div class="manufacturer-point-toggle manufacturer-point-toggle03">
+                                    <span class="manufacturer-point-title">准备用例</span>
+                                </div>
+                                <div class="manufacturer-point-content">
+                                    <div class="solid-arrow"></div>
+                                    <ul class="manufacturer-point-list manufacturer-list">
+                                        <li>创建项目、行业或竞争对手的用例：创建不同的角色并确定其功能、条件、描述活动和交互，并转移到项目的需求当中。</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="manufacturer-point">
+                                <div class="manufacturer-point-toggle manufacturer-point-toggle04">
+                                    <span class="manufacturer-point-title">实施区块链方案的技术概述</span>
+                                </div>
+                                <div class="manufacturer-point-content">
+                                    <div class="solid-arrow"></div>
+                                    <ul class="manufacturer-point-list manufacturer-list">
+                                        <li>由区块链专家评估、审查项目的需求，并做技术选型包括区块链平台、框架、其它工具等。</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="manufacturer-point">
+                                <div class="manufacturer-point-toggle manufacturer-point-toggle05">
+                                    <span class="manufacturer-point-title">项目试点/POC测试</span>
+                                </div>
+                                <div class="manufacturer-point-content">
+                                    <ul class="manufacturer-point-list manufacturer-list">
+                                        <li>对项目进行试点和概念的验证，让大型项目在正式运行之前识别、评估和演示区块链解决方案的成果。</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row block">
             <div class="research-who-is-this">
-                <h2 class="gor-100 col-md-12 col-sm-4">我们提供的技术和解决方案适用于哪些场景和行业？</h2>
-                <div class="h4 gor-100 col-md-12 col-sm-4">对于任何行业或任何规模的企业，我们都做好了调查的准备，为您的企业量身打造区块链的项目。</div>
-                <div class="gor-100">
+                <h2 class="col-md-12 col-sm-4">我们提供的技术和解决方案适用于哪些场景和行业？</h2>
+                <div class="h4 col-md-12 col-sm-4">对于任何行业或任何规模的企业，我们都做好了调查的准备，为您的企业量身打造区块链的项目。</div>
+                <div class="">
                     <div class="row advisory-icons hyperledger-icons research-development-icons col-md-12 col-sm-4">
                         <div class="col-lg-4 df mw-300">
                             <div class="ico ico-1"></div>
@@ -162,10 +243,10 @@
         </div>
         <div class="row block">
             <div class="research-expertise">
-                <h2 class="col-md-12 gor-100 col-sm-12">我们在区块链开发方面的专业知识</h2>
-                <div class="h4 gor-100 col-lg-12 col-md-12 col-sm-12">
-                    我们帮助合作伙伴从一系列行业领先的区块链中选择最合适的区块链技术，包括Hyperledger(超级账本)，BitShares(比特股)，EOSIO和Ethereum(以太坊)。</div>
-                <div class="gor-100 col-lg-12 col-md-12 col-sm-12">
+                <h2 class="col-md-12 col-sm-12">我们在区块链开发方面的专业知识</h2>
+                <div class="h4 col-lg-12 col-md-12 col-sm-12">
+                    从一系列行业领先的区块链中选择最合适的区块链技术，包括Hyperledger(超级账本)，BitShares(比特股)，EOSIO和Ethereum(以太坊)。</div>
+                <div class="col-lg-12 col-md-12 col-sm-12">
                     <div class="row advisory-icons sc-icons retail-icons research-expertise-icons">
                         <div class="col-lg-6 col-md-12 col-sm-12 df">
                             <div class="ico"></div>
