--- a/views/services/research-and-development.ejs
+++ b/views/services/research-and-development.ejs
@@ -90,7 +90,7 @@
                 <h2>OpenLedger研发部门</h2>
                 <div class="gor-100">
                     <div class="h4">
-                        团队内拥有多名区块链技术专家，由他们分析项目实施所面临的挑战和业务方面的问题，并为您当前的需求提供最有效的解决方案。
+                        团队内拥有多名区块链技术的专家，他们负责分析项目实施所面临的各种挑战和业务方面等问题，并提供最有效的解决方案。
                     </div>
                 </div>
             </div>
